@@ -37,6 +37,8 @@ isaac.h
 isaac.c
 lucas_seq.h
 lucas_seq.c
+perfect_powers.h
+perfect_powers.c
 random_prime.h
 random_prime.c
 real.h
@@ -74,6 +76,7 @@ t/26-lambertw.t
 t/26-logs.t
 t/26-mersenne.t
 t/26-mod.t
+t/26-perfectpowers.t
 t/26-powerful.t
 t/26-powercount.t
 t/26-practical.t
