@@ -169,35 +169,25 @@
 - next_perfect_power, prev_perfect_power
   https://github.com/trizen/sidef/commit/81af8f018cca4ab7813d4cfaa46fd2e45796a52d
 
-=============== MUST DO BEFORE RELEASE
+- make is_carmichael deterministic test go faster
 
-- tests for:
-  add1int sub1int
-  signint cmpint cmpabsint
-  setbit clrbit notbit tstbit
-  bitand bitor bitxor bitnot
+- export is_square_free
+
+- have trial factor use treesieve static function.
+
+- powerfree count
+- is_powerfree
+
+=============== MUST DO BEFORE RELEASE
 
 - change is_{,euler,strong)_pseudoprime to use default base 2
 
 - consistant mod behavior.  n=>|n|, n=0 => undef  n=1 => 0.
 
-- what's going on with compbit and bitcom?
-
-- is_qr faster version?  Better tests?
-
 - finish looking at all mp*_ui functions to check for UV/IV vs long use.
-
-- new trial factoring.  Also we probably want trial factor UV -> ui.
-
-- move treesieve in trial factor to its own routine.
-  In fact, possibly keep all that code but with a different interface.
 
 - consider exporting a sieve segment or sieve from/to routine.  Then our
   trial iterator can sieve segments, vecprod them, do gcd.  Maybe a
   prime_iterator_next64 to get 64 values.
 
 - check overflow in prime iterator / trial division for 32-bit unsigned long.
-
-- negmod tests
-
-- make addmod etc work on |n| instead of error
